# llm-global-games

./: .gitignore  CLAUDE.md  DATA_MANIFEST.txt  Makefile  pyproject.toml
agent_based_simulation/: CLAUDE.md  DATA_MANIFEST.txt  __init__.py  analyze_batch_results.py  briefing.py  calibration.py  experiment.py  infodesign.py  make_figures.py  paper.tex  render_paper_tables.py  run.py  run_critique_response.sh  run_infodesign.py  run_paper2_all.sh  run_remaining.sh  run_replication.sh  runtime.py  verified_stats.json  verify_paper_stats.py
agent_based_simulation/tables/: tab_bandwidth.tex  tab_crossmodel.tex  tab_decomposition.tex  tab_infodesign_summary.tex  tab_main_results.tex  tab_models.tex  (+1 more)
analysis/: agent_regressions.py  analyze_batch_results.py  analyze_beliefs.py  analyze_beliefs_cross_model.py  check_paper_numbers.py  classifier_baselines.py  classifier_results.json  construct_validity.py  construct_validity_results.json  generate_example_briefings.py  level_k_benchmark.py  make_belief_figure.py  make_diagrams.py  make_figures.py  message_informativeness_results.json  models.py  regression_results.json  render_paper_tables.py  style.py  verified_stats.json  verify_paper_stats.py
output/: overnight_log.txt
paper/: Eltokhy_LLMGlobalGames.tex  online_appendix.tex  paper.tex  references.bib
scripts/: make_data.py  run_base_model_surveillance.sh  run_beliefs.sh  run_overnight.sh  run_paper2_all.sh  run_punishment_risk.sh  run_referee_response.sh  run_referee_response_v2.sh  run_remaining.sh  run_remaining_v2.sh  run_temperature_sweep.sh
tests/: test_stats.py
(+467 files in other folders)
