[project]
name = "llm-global-games"
version = "0.1.0"
description = "LLMs Can Play (Global) Games — Testing LLM agents in the Morris-Shin regime change game"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10",
    "networkx>=3.0",
    "numpy>=2.0",
    "openai>=1.0",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "statsmodels>=0.14.6",
    "tqdm>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
